--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/core": "^17.3.7",
     "@angular/forms": "^17.3.7",
     "@angular/material": "^17.3.7",
+    "@angular/material-moment-adapter": "^18.2.0",
     "@angular/platform-browser": "^17.3.7",
     "@angular/platform-browser-dynamic": "^17.3.7",
     "@angular/router": "^17.3.7",
     "angular-tabler-icons": "^3.1.0",
     "apexcharts": "^3.49.0",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "ng-apexcharts": "1.10.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
@@ -32,6 +35,7 @@
     "@angular/cli": "~17.3.6",
     "@angular/compiler-cli": "^17.3.7",
     "@types/jasmine": "~5.1.4",
+    "@types/moment": "^2.13.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
