--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angular-tabler-icons": "^3.1.0",
     "apexcharts": "^3.49.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "moment": "^2.30.1",
     "ng-apexcharts": "1.10.0",
+    "ng2-charts": "^4.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.5"
